--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,12 +11,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+        with:
+          submodules: recursive
+          fetch-depth: 0
       - name: Run helm-docs
-        run: .github/helm-docs.sh
+        run: make helm_docs
 
   lint-and-test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         # https://hub.docker.com/r/kindest/node/tags
         kubeVersion:
@@ -26,17 +30,18 @@ jobs:
           - v1.22.15
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
+          submodules: recursive
           fetch-depth: 0
 
       # https://github.com/Azure/setup-helm/releases
       - name: Set up Helm
         uses: azure/setup-helm@v3
-
-      - uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          version: v3.10.0
+
+      - uses: actions/setup-python@v3
 
       # https://github.com/helm/chart-testing-action/releases
       - name: Set up chart-testing
@@ -47,7 +52,7 @@ jobs:
         run: |
           changed=$(ct --config ct.yaml list-changed)
           if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
+            echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Run chart-testing (lint)
