--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "makefiles"]
 	path = makefiles
-	url = git@github.com:Kube10K/makefiles.git
+	url = https://github.com/Kube10K/makefiles.git
