--- a/charts/node-local-dns/Chart.yaml
+++ b/charts/node-local-dns/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-version: 0.0.2
-appVersion: latest  # ignored
+version: 0.0.3
+appVersion: 1.22.8
 description: NodeLocal DNS Cache helm chart
 name: node-local-dns
 sources:
